--- a/pkg/indentation-0.0.1/README.rdoc
+++ b/pkg/indentation-0.0.1/README.rdoc
@@ -96,11 +96,14 @@ A library of extensions to Ruby's Array and String classes that allow indentatio
   
 == REQUIREMENTS:
 
-* none
+* rake (for installation)
 
 == INSTALL:
 
-* gem install indentation
+* git clone git://github.com/samueldana/indentation.git
+* cd indentation
+* rake install_gem
+  * OR: rake rvm_install_gem (doesn't use sudo)
 
 == LICENSE:
 
