--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,6 @@
+=== 0.0.4 2010-11-08
+* Fixed documentation to include find_least_indentation function
+
 === 0.0.3 2010-05-07
 * Fixed documentation regarding installation and summary
 
